--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
             <div class="envelope">
                 <div class="card">
                     <div class="text">
-                        Love You 3000<br> Thu"<br> Day
+                        Love You 3000<br> Thu"<br> 
                     </div>
-                    <div class="tenor-gif-embed" data-postid="6447159128561953694" data-share-method="host" data-aspect-ratio="1.23267" data-width="15%"><a href="https://tenor.com/view/heart-gif-6447159128561953694">Heart GIF</a>from <a href="https://tenor.com/search/heart-gifs">Heart GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-                </div>
+                    <img src="https://i4407.files.wordpress.com/2024/02/vid_20240115_092652_226.mp4" alt="Computer man" style="width:60px;height:60px;">
             </div>
             <div class="front"></div>
         </div>
