--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="envelope">
                 <div class="card">
                     <div class="text">
-                        Love You 3000<br> Thu"<br> 
+                          happy valentine day par thal thal<br> Thu"<br> 
                     </div>
                     <img src="https://i4407.files.wordpress.com/2024/02/vid_20240115_092652_226.mp4" alt="Computer man" style="width:60px;height:60px;">
             </div>
